--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@
 \usepackage[utf8]{inputenc} % Use accents in source code, load before biblatex
 \usepackage[T1]{fontenc} % Show accents in output
 
-\usepackage[style=authoryear,sorting=nyt]{biblatex}
+\usepackage[style=authoryear,sorting=nyt,mincitenames=1, maxcitenames=2]{biblatex}
 %    nty Sort by name, title, year.
 %    nyt Sort by name, year, title.
 %    nyvt Sort by name, year, volume, title.
@@ -186,6 +186,8 @@
 
 \newcommand{\ammoniumnitrate}{\ce{NH_4NO_3}\,}
 %{\textcolor{Blue}
+
+\newcommand{\urea}{\ce{CO(NH_2)_2}\,}
 
 \newcommand{\yes}{{\textcolor{green}{0}}}
 
